プロフィール写真を返すエンドポイントの作成
